metadata/force-app/main/default/objects/CustomName_OALYW__c/CustomName_OALYW__c.object-meta.xml
<CustomObject>
    <description>Description_OWsul</description>
    <label>CustomLabel_yGawv</label>
    <nameField>
        <label>CustomLabel_yGawv</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_yGawvs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>