metadata/force-app/main/default/objects/CustomName_OALYW__c/fields/CustomField_jdWxH__c.field-meta.xml
<CustomField>
    <fullName>CustomField_jdWxH__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldkGdrU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>